--- a/Index.html
+++ b/Index.html
@@ -26,9 +26,9 @@
                 Home
             </a>
 
-            <a href="sobre.html">Sobre</a>
+            <a href="sobre.html">Quem somos</a>
 
-            <a href="Armario.html">Armários</a>
+            <a href="armario.html">Armários</a>
 
             <a href="contato.html">Contato</a>
 
@@ -63,7 +63,7 @@
         <div id="Produto3">
             <img src="WhatsApp Image 2023-04-24 at 13.59.15 (1).jpeg">
             <h3>Camisa ETESP | Azul Escuro</h3>
-            <p>R$19,99</p>
+            <p>R$49,99</p>
             <button>
                 <a href="http://www.etesaopaulo.com.br/">
                     Adicione ao carrinho
