Como assim mensagem??

--- a/armario.html
+++ b/armario.html
@@ -59,11 +59,11 @@
 
         <script>
             function changeColor(id) {
-                var button = document.getElementById(id);
-                if (button.style.backgroundColor === 'darkgoldenrod') {
-                    button.style.backgroundColor = 'rgb(74, 189, 22)';
-                } else {
-                    button.style.backgroundColor = 'darkgoldenrod';
+                var corBotao = document.getElementById(id).style.backgroundColor;
+                if (corBotao === 'darkgoldenrod') {
+                    corBotao = 'rgb(74, 189, 22)';
+                } else if(corBotao = 'rgb(74,189,22)'){
+                    corBotao = 'darkgoldenrod';
                 }
             }
         </script>
