--- a/armario.html
+++ b/armario.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ETESP | LOJA</title>
-    <link rel="stylesheet" type="text/css" href="armarios-style.css">
+    <link rel="stylesheet" type="text/css" href="assets/armarios-style.css">
 </head>
 <body>
     <header>
@@ -23,7 +23,7 @@
             <a href="sobre.html">Quem somos</a>
             <a href="armario.html">Armários</a>
             <a href="contato.html">Contato</a>
-            <a href="entrar.html">Entrar</a>
+            <a href="https://example.com">Entrar</a>
         </div>
     </nav>
     <main>
