--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--para configurar a resolução da tela para mobile -->
     <title>ETESP | LOJA</title>
-    <link rel="stylesheet" type="text/css" href="index-style.css">
+    <link rel="stylesheet" type="text/css" href="assets/index-style.css">
 </head>
 
 <body>
     <header>
         <div id="logo">
-            <img src="etec_ra_metropolitana_sp_capital_sao_paulo_(bom_retiro)_br.webp">
+            <img src="assets/etec_ra_metropolitana_sp_capital_sao_paulo_(bom_retiro)_br.webp">
         </div>
         <div id="lj">
             <h1>
@@ -37,7 +37,7 @@
     </nav>
     <main>
         <div id="Produto1">
-            <img src="WhatsApp Image 2023-04-24 at 13.59.15.jpeg">
+            <img src="assets/WhatsApp Image 2023-04-24 at 13.59.15.jpeg">
             <h3>Moletom ETESP</h3>
             <p>R$49,99</p>
             <button>
@@ -49,7 +49,7 @@
 
 
         <div id="Produto2">
-            <img src="WhatsApp Image 2023-04-24 at 13.59.15 (2).jpeg">
+            <img src="assets/WhatsApp Image 2023-04-24 at 13.59.15 (2).jpeg">
             <h3>Calça Etesp | Azul Escuro</h3>
             <p>R$29,99</p>
             <button>
@@ -61,7 +61,7 @@
 
 
         <div id="Produto3">
-            <img src="WhatsApp Image 2023-04-24 at 13.59.15 (1).jpeg">
+            <img src="assets/WhatsApp Image 2023-04-24 at 13.59.15 (1).jpeg">
             <h3>Camisa ETESP | Azul Escuro</h3>
             <p>R$49,99</p>
             <button>
