Armario fix try

--- a/armario.html
+++ b/armario.html
@@ -62,10 +62,9 @@
                 var corBotao = document.getElementById(id).style.backgroundColor;
                 if (corBotao === 'darkgoldenrod') {
                     corBotao = 'rgb(74, 189, 22)';
-                } else if(corBotao = 'rgb(74,189,22)'){
+                } else if(corBotao === 'rgb(74,189,22)'){
                     corBotao = 'darkgoldenrod';
                 }
-            }
         </script>
     </main>
     <footer>
