armario try fix2

--- a/armario.html
+++ b/armario.html
@@ -64,6 +64,8 @@
                     corBotao = 'rgb(74, 189, 22)';
                 } else if(corBotao === 'rgb(74,189,22)'){
                     corBotao = 'darkgoldenrod';
+                }else{
+                    corBotao = 'darkgoldenrod'
                 }
         </script>
     </main>
