--- a/entrar.html
+++ b/entrar.html
@@ -39,3 +39,63 @@
             margin-bottom: 20px;
         }
         
+        .container input[type="button"] {
+            width: 100%;
+            padding: 10px;
+            background-color: #4caf50;
+            color: #fff;
+            border: none;
+            border-radius: 3px;
+            cursor: pointer;
+        }
+    </style>
+</head>
+
+<body>
+    <header>
+        <div id="logo">
+            <img src="assets/etec_ra_metropolitana_sp_capital_sao_paulo_(bom_retiro)_br.webp">
+        </div>
+        <div id="lj">
+            <h1>
+                LOJA OFICIAL
+            </h1>
+        </div>
+    </header>
+    <nav id="menu-h">
+        <div>
+            <a href="index.html">
+                Home
+            </a>
+
+            <a href="sobre.html">Quem somos</a>
+
+            <a href="armario.html">Armários</a>
+
+            <a href="contato.html">Contato</a>
+
+            <a href="entrar.html">Entrar</a>
+        </div>
+    </nav>
+    <main>
+        <div class="container">
+            <form name="login">
+                <img src="assets/pfp.png" alt="">
+                <div id="APRESENTA">
+                    <h2>Digite seu RM</h2>
+                    <input type="number">
+                    <h2>Digite sua senha</h2>
+                    <input type="password">
+                    <input type="submit" value="ENTRAR">
+                </div>
+            </form>
+        </div>
+    </main>
+    <footer>
+        <p>
+            © Riquelme Borges, Cauê Santos, Daniel Minoru, Gabriel Eiki, Henrique Bressan - Todos os direitos reservados
+        </p>
+    </footer>
+</body>
+
+</html>
