Edição do entrar

--- a/entrar.html
+++ b/entrar.html
@@ -83,10 +83,10 @@
                 <img src="assets/pfp.png" alt="">
                 <div id="APRESENTA">
                     <h2>Digite seu RM</h2>
-                    <input type="number">
+                    <input type="number" required>
                     <h2>Digite sua senha</h2>
                     <input type="password">
-                    <input type="submit" value="ENTRAR">
+                    <input type="submit" value="ENTRAR" required>
                 </div>
             </form>
         </div>
