Mudanças gerais pt2

--- a/qsomos.html
+++ b/qsomos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--para configurar a resolução da tela para mobile -->
     <title>ETESP | LOJA</title>
-    <link rel="stylesheet" type="text/css" href="qsomos-style.css">
+    <link rel="stylesheet" type="text/css" href="assets/qsomos-style.css">
 </head>
 
 <body>
