MUDANÇAS GERAIS PT3

--- a/armario.html
+++ b/armario.html
@@ -65,7 +65,7 @@
             </div>
             <div id="comprar">
                 <button onclick="tornarVermelho()">
-                    <H5>CONFIRMAR ESCOLHA</H5>
+                    <H5>ADICIONAR AO CARRINHO</H5>
                 </button>
             </div>
         </div>
