Mudanças gerais pt4

--- a/armario.html
+++ b/armario.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ETESP | LOJA</title>
     <link rel="stylesheet" type="text/css" href="assets/armarios-style.css">
+    <link rel="stylesheet" href="armarios-style.css">
 </head>
 
 <body>
     <header>
         <div id="logo">
-            <img src="assets/etec_ra_metropolitana_sp_capital_sao_paulo_(bom_retiro)_br.webp">
+            <img src="assets/etec_ra_metropolitana_sp_capital_sao_paulo_(bom_retiro)_br.webp" onError="this.onerror=null;this.src='etec_ra_metropolitana_sp_capital_sao_paulo_(bom_retiro)_br.webp';">
         </div>
         <div id="lj">
             <h1>
@@ -19,8 +20,8 @@
             </h1>
         </div>
     </header>
-    <nav id="menu-h">
-        <div>
+    <nav>
+        <div id="menu-h">
             <a href="index.html">Home</a>
             <a href="sobre.html">Quem somos</a>
             <a href="armario.html">Armários</a>
