--- a/index.html
+++ b/index.html
@@ -152,5 +152,8 @@
             © Riquelme Borges, Cauê Santos, Daniel Minoru, Gabriel Eiki, Henrique Bressan - Todos os direitos reservados <!--Rikelme Souza e Gabriel: Modelos das imagens-->
         </p>
     </footer>
+    <script src="assets/site.js">
+
+    </script>
 </body>
 </html>
