--- a/qsomos.html
+++ b/qsomos.html
@@ -7,12 +7,14 @@
     <!--para configurar a resolução da tela para mobile -->
     <title>ETESP | LOJA</title>
     <link rel="stylesheet" type="text/css" href="assets/qsomos-style.css">
+    <link rel="icon" href="assets/etec_ra_metropolitana_sp_capital_sao_paulo_(bom_retiro)_br.webp"> 
+
 </head>
 
 <body>
     <header>
         <div id="logo">
-            <img src="etec_ra_metropolitana_sp_capital_sao_paulo_(bom_retiro)_br.webp">
+            <img src="assets/etec_ra_metropolitana_sp_capital_sao_paulo_(bom_retiro)_br.webp">
         </div>
         <div id="lj">
             <h1>
@@ -35,21 +37,23 @@
             <a href="entrar.html">Entrar</a>
         </div>
     </nav>
-    <main>
+    <main style="padding: 10px;">
         <p>
-            Somos um grupo de estudantes que percebemos os diversos problemas na hora de comprar os uniformes/armários, e motivados 
-            pelo MB de Práticas Empreendedoras, nos juntamos para criar um site que ajude os alunos e seus devidos responsáveis a ter uma melhor 
-            experiencia na hora de comprar seus respectivos uniformes e armários. 
-        </p>   
+            Somos uma equipe de estudantes com o intuito de solucionar os problemas relacionados a APM. Nosso objetivo é
+            simplificar a compra de uniformes e o aluguel de armários escolares, proporcionando conveniência e
+            praticidade a todos os estudantes.
+        </p>
         <p>
             Desde já, agradecemos por nos escolher.
         </p>
-    
+
     </main>
     <footer>
         <p>
-            © Riquelme Borges, Cauê Santos, Daniel Minoru, Gabriel Eiki, Henrique Bressan - Todos os direitos reservados <!--Rikelme Souza e Gabriel: Modelos das imagens-->
+            © Riquelme Borges, Cauê Santos, Daniel Minoru, Gabriel Eiki, Henrique Bressan - Todos os direitos reservados
+            <!--Rikelme Souza e Gabriel: Modelos das imagens-->
         </p>
     </footer>
 </body>
+
 </html>
