--- a/armario.html
+++ b/armario.html
@@ -7,6 +7,8 @@
     <title>ETESP | LOJA</title>
     <link rel="stylesheet" type="text/css" href="assets/armarios-style.css">
     <link rel="stylesheet" href="armarios-style.css">
+    <link rel="icon" href="assets/etec_ra_metropolitana_sp_capital_sao_paulo_(bom_retiro)_br.webp"> 
+
 </head>
 
 <body>
@@ -20,13 +22,19 @@
             </h1>
         </div>
     </header>
-    <nav>
-        <div id="menu-h">
-            <a href="index.html">Home</a>
-            <a href="sobre.html">Quem somos</a>
+    <nav id="menu-h">
+        <div>
+            <a href="index.html">
+                Home
+            </a>
+
+            <a href="qsomos.html">Quem somos</a>
+
             <a href="armario.html">Armários</a>
+
             <a href="contato.html">Contato</a>
-            <a href="https://example.com">Entrar</a>
+
+            <a href="entrar.html">Entrar</a>
         </div>
     </nav>
     <main>
