--- a/armario.html
+++ b/armario.html
@@ -6,9 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ETESP | LOJA</title>
     <link rel="stylesheet" type="text/css" href="assets/armarios-style.css">
-    <link rel="stylesheet" href="armarios-style.css">
     <link rel="icon" href="assets/etec_ra_metropolitana_sp_capital_sao_paulo_(bom_retiro)_br.webp"> 
+<style>
+    @media only screen and (max-width: 600px) {
+    nav, header {
+        width: 100%;
+    }
 
+    header #lj h1 {
+        font-size: 41px;
+    }
+
+    header #lj  {
+        width: 65%
+    }
+    
+    header div {
+        flex-direction: row;
+    }
+
+    header #logo {
+        width: 35%
+    }
+
+
+    nav #menu-h {
+        flex-direction: column;
+    }
+
+    body main #elements {
+        flex-direction: column;
+    }
+}
+</style>
 </head>
 
 <body>
