--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8"> <!--Para acentuação-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--para configurar a resolução da tela para mobile -->
+    <!--para configurar a resolução da tela para mobile --> 
     <title>ETESP | LOJA</title>
     <link rel="stylesheet" type="text/css" href="assets/index-style.css">
     <link rel="icon" href="assets/etec_ra_metropolitana_sp_capital_sao_paulo_(bom_retiro)_br.webp"> 
@@ -23,6 +23,9 @@
         <div id="carrinho" onclick="Ver()">
             <div id="ativo"></div>
             <img src="https://static-00.iconduck.com/assets.00/shopping-cart-icon-512x462-yrde1eu0.png" alt="">
+        </div>
+        <div id="perfil">
+            <img id="foto" src="assets/pfp.png">
         </div>
     </header>
     <nav id="menu-h">
